--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -1,3 +1,11 @@
-// Éditer les variables du thème pour configurer votre site web 
-// Variables disponibles : https://github.com/noesya/osuny-hugo-theme-AAA/blob/main/assets/sass/_theme/_configuration.sass
-// Documentation sur : https://developers.osuny.org/docs/theme/theme-aaa/
+$color-accent: #0038FF
+$color-text: #000000
+$color-text-alt: #454545
+$color-border: rgba(0, 0, 0, 0.30)
+$color-background-alt: #F2F2F2
+$color-background: #FFFFFF
+
+$header-background: $color-background
+$header-border-bottom-width: 0
+$hero-background-color: $color-background
+$footer-background-color: $color-background
