--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -5,6 +5,9 @@ $color-border: rgba(0, 0, 0, 0.30)
 $color-background-alt: #F2F2F2
 $color-background: #FFFFFF
 
+$heading-font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif
+$body-font-family: $heading-font-family
+
 $header-background: $color-background
 $header-border-bottom-width: 0
 $hero-background-color: $color-background
