accueil-bis-test

--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -3,3 +3,35 @@
     text-transform: none
     font-weight: bold
     font-size: px2rem(30)
+
+.accueil-bis
+    img
+        max-width: 20px !important
+        height: 20px
+    img:hover
+        -ms-transform: scale(29.1) /* IE 9 */
+        -webkit-transform: scale(1.5) /* Safari 3-8 */
+        transform: scale(29.1)
+        height: auto
+        transition: 0.1s ease-out 50ms
+    figure
+        height: 0
+        align-self: center
+    li
+        display: block
+        flex-direction: row
+        grid-gap: px2rem(12) !important
+    h3
+        font-size: px2rem(22)
+        font-weight: normal
+    .block-features
+        ul
+            display: flex !important
+            flex-direction: column
+            grid-gap: px2rem(4) !important
+    .blocks
+        display: flex
+        flex-direction: row
+        align-self: center
+    .block
+        margin-top: 0
