--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -6,14 +6,17 @@
 
 .accueil-bis
     img
-        max-width: 20px !important
-        height: 20px
+        max-width: 30px !important
+        height: auto
+        border: 1px solid #FFF
+        box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.20)
     img:hover
-        -ms-transform: scale(29.1) /* IE 9 */
+        -ms-transform: scale(15) /* IE 9 */
         -webkit-transform: scale(1.5) /* Safari 3-8 */
-        transform: scale(29.1)
+        transform: scale(15)
         height: auto
         transition: 0.1s ease-out 50ms
+        border: none
     figure
         height: 0
         align-self: center
@@ -25,6 +28,7 @@
         font-size: px2rem(22)
         font-weight: normal
     .block-features
+        height: 100vh
         ul
             display: flex !important
             flex-direction: column
