--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -6,6 +6,7 @@
 
 .accueil-bis
     header#document-header
+        background: none
         @include media-breakpoint-up(desktop)
             .container
                 flex-direction: column
