--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -8,7 +8,16 @@ $color-background: #FFFFFF
 $heading-font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif
 $body-font-family: $heading-font-family
 
-$header-background: $color-background
+$h1-size-desktop: px2rem(30)
+$h1-size: px2rem(30)
+$h1-weight: normal
+$lead-hero-size: px2rem(20)
+$lead-hero-size-desktop: px2rem(20)
+
+$header-background: none
+$header-sticky-background: none
 $header-border-bottom-width: 0
-$hero-background-color: $color-background
-$footer-background-color: $color-background
+$hero-background-color: none
+$hero-height: 200px
+$hero-height-desktop: 200px
+$footer-background-color: none
