--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -4,6 +4,28 @@
     font-weight: bold
     font-size: px2rem(30)
 
+.hero
+    .container
+        .content
+            padding-top: 0
+
+.block-posts
+    article
+        .post-content
+            p
+                display: none
+        .post-meta
+            display: none
+
+.breadcrumb-container,
+.post-sidebar,
+.block-pagination
+    display: none
+
+body:not(.full-width) .document-content .heading h2, 
+body:not(.full-width) .document-content .block .block-content
+    padding-left: 0
+
 .accueil-bis
     header#document-header
         background: none
