--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -8,6 +8,8 @@
     .container
         .content
             padding-top: 0
+            figure
+                display: none
 
 .block-posts
     article
