--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -28,6 +28,10 @@ body:not(.full-width) .document-content .heading h2,
 body:not(.full-width) .document-content .block .block-content
     padding-left: 0
 
+.block-gallery--carousel
+    picture
+        img
+            width: 40px
 .accueil-bis
     header#document-header
         background: none
