--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -3,7 +3,13 @@
     text-transform: none
     font-weight: bold
     font-size: px2rem(30)
-
+a.logo
+    background: url(/assets/images/papier.png) lightgray 50% / cover no-repeat
+    margin: 10px 0 10px
+    @include media-breakpoint-up(desktop)
+        padding: 12px
+        padding-top: 2px
+        padding-bottom: 2px
 .hero
     .container
         .content
@@ -23,76 +29,84 @@
 .post-sidebar,
 .block-pagination
     display: none
-
+h2
+    display: none
 body:not(.full-width) .document-content .heading h2, 
 body:not(.full-width) .document-content .block .block-content
     padding-left: 0
 
 .block-gallery--carousel
-    picture
-        img
-            width: 40px
-.accueil-bis
-    header#document-header
-        background: none
-        @include media-breakpoint-up(desktop)
-            .container
-                // flex-direction: column
-                .logo
-                    margin: 10px 0 10px
-    .hero
-        min-height: 0
-    h1
-        display: none
-    img
-        max-width: 30px !important
-        height: auto
-        border: 1px solid #FFF
-        box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.20)
-    img:hover
-        @include media-breakpoint-up(desktop)
-            -ms-transform: scale(15) /* IE 9 */
-            -webkit-transform: scale(1.5) /* Safari 3-8 */
-            transform: scale(15)
-            height: auto
-            transition: 0.1s ease-out 50ms
-            border: none
-    li
-        @include media-breakpoint-up(desktop)
-            display: block
-            // flex-direction: row
-            grid-gap: px2rem(12) !important
-        h3
-            font-weight: normal
-            @include media-breakpoint-up(desktop)
-                font-size: px2rem(15)
-                margin-top: 0.5rem !important
-    .top
-        @include media-breakpoint-up(desktop)
-            width: auto !important
-    a
-        background: url(/assets/images/papier.png) lightgray 50% / cover no-repeat
-        text-decoration: none
-        @include media-breakpoint-up(desktop)
-            padding: 12px
-            padding-top: 2px
-            padding-bottom: 2px
-    .block-features
-        @include media-breakpoint-up(desktop)
-            width: col(6)
-        ul
-            @include media-breakpoint-up(desktop)
-                // display: flex !important
-                // flex-direction: column
-                grid-gap: px2rem(4) !important
-                justify-content: start
-    .blocks
-        align-self: center
-        @include media-breakpoint-up(desktop)
-            // height: 100vh
-            // display: flex
-            // flex-direction: row
-    .block
-        margin-top: 0
-    .breadcrumb-container
-        display: none
+    figure
+        display: flex
+        flex-direction: row
+        picture
+            img
+                width: 40px
+        figcaption
+            margin-left: $spacing0
+            align-content: center
+
+// .accueil-bis
+//     header#document-header
+//         background: none
+//         @include media-breakpoint-up(desktop)
+//             .container
+//                 // flex-direction: column
+//                 .logo
+//                     margin: 10px 0 10px
+//     .hero
+//         min-height: 0
+//     h1
+//         display: none
+//     img
+//         max-width: 30px !important
+//         height: auto
+//         border: 1px solid #FFF
+//         box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.20)
+//     img:hover
+//         @include media-breakpoint-up(desktop)
+//             -ms-transform: scale(15) /* IE 9 */
+//             -webkit-transform: scale(1.5) /* Safari 3-8 */
+//             transform: scale(15)
+//             height: auto
+//             transition: 0.1s ease-out 50ms
+//             border: none
+//     li
+//         @include media-breakpoint-up(desktop)
+//             display: block
+//             // flex-direction: row
+//             grid-gap: px2rem(12) !important
+//         h3
+//             font-weight: normal
+//             @include media-breakpoint-up(desktop)
+//                 font-size: px2rem(15)
+//                 margin-top: 0.5rem !important
+//     .top
+//         @include media-breakpoint-up(desktop)
+//             width: auto !important
+//     a
+//         background: url(/assets/images/papier.png) lightgray 50% / cover no-repeat
+//         text-decoration: none
+//         @include media-breakpoint-up(desktop)
+//             padding: 12px
+//             padding-top: 2px
+//             padding-bottom: 2px
+//     .block-features
+//         @include media-breakpoint-up(desktop)
+//             width: col(6)
+//         ul
+//             @include media-breakpoint-up(desktop)
+//                 // display: flex !important
+//                 // flex-direction: column
+//                 grid-gap: px2rem(4) !important
+//                 justify-content: start
+//     .blocks
+//         align-self: center
+//         @include media-breakpoint-up(desktop)
+//             // height: 100vh
+//             // display: flex
+//             // flex-direction: row
+//     .block
+//         margin-top: 0
+//     .breadcrumb-container
+//         display: none
