--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -34,16 +34,15 @@ body:not(.full-width) .document-content .block .block-content
     padding-left: 0
 
 .block-gallery--carousel
-    figure
-        display: flex
+    picture
+        img
+            width: 40px
+    figcaption
+        margin-left: $spacing0
+        align-content: center
+    a
+        display: flex !important
         flex-direction: row
-        picture
-            img
-                width: 40px
-        figcaption
-            margin-left: $spacing0
-            align-content: center
-
 
 
 // .accueil-bis
