--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -14,8 +14,6 @@ a.logo
     .container
         .content
             padding-top: 0
-            figure
-                display: none
 
 .block-posts
     article
@@ -46,6 +44,17 @@ body:not(.full-width) .document-content .block .block-content
             margin-left: $spacing0
             align-content: center
 
+.goverlay
+    background: white
+.glightbox-clean 
+    .gclose,
+    .gprev,
+    .gnext
+        &, &:hover
+            background: none
+            color: black
+        svg
+            filter: invert(100%)
 // .accueil-bis
 //     header#document-header
 //         background: none
